P5/k8s/equipos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: equipos
  namespace: sa-p5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: equipos
  template:
    metadata:
      labels:
        app: equipos
    spec:
      containers:
      - name: equipos
        image: bekinggo/equipos
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: equipos
  namespace: sa-p5
spec:
  selector:
    app: equipos
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
