P5/k8s/mantenimiento.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mantenimiento
  namespace: sa-p5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mantenimiento
  template:
    metadata:
      labels:
        app: mantenimiento
    spec:
      containers:
      - name: mantenimiento
        image: bekinggo/mantenimiento
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: mantenimiento
  namespace: sa-p5
spec:
  selector:
    app: mantenimiento
  ports:
  - port: 8083
    targetPort: 8083
  type: ClusterIP
