P5/k8s/reportes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reportes
  namespace: sa-p5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reportes
  template:
    metadata:
      labels:
        app: reportes
    spec:
      containers:
      - name: reportes
        image: bekinggo/reportes
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: reportes
  namespace: sa-p5
spec:
  selector:
    app: reportes
  ports:
  - port: 8084
    targetPort: 8084
  type: ClusterIP
