P5/k8s/ubicaciones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubicaciones
  namespace: sa-p5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubicaciones
  template:
    metadata:
      labels:
        app: ubicaciones
    spec:
      containers:
      - name: ubicaciones
        image: bekinggo/ubicaciones
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ubicaciones
  namespace: sa-p5
spec:
  selector:
    app: ubicaciones
  ports:
  - port: 8082
    targetPort: 8082
  type: ClusterIP
